# lib-rs-feed

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/lib/: feed.rs  lib.rs  parser.rs
