[package]
name = "lib-rs-feed"
version = "0.2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lib-rs-feed"
path = "src/main.rs"

[lib]
name = "lib_rs_feed_lib"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
cow-utils = "0.1"
crates_io_api = "0.8"
futures = "0.3"
itertools = "0.12"
once_cell = "1.18"
oss-rust-sdk = "0.8"
reqwest = "0.11"
rss = "2.0"
scraper = "0.18"
tokio = { version = "1.16", features = ["rt", "rt-multi-thread", "macros", "parking_lot"] }
uuid = { version = "1.6.1", features=["v5"] }